# music_hub

./: .gitignore
music_hub_device/: CMakeLists.txt  partitions.csv  sdkconfig
music_hub_device/main/: CMakeLists.txt  crc.c  main.c
music_hub_device/main/common_inc/: base_types.h  client_serv_prot.h  crc.h  status.h
music_hub_device/modules/client_serv_com/: cserver_com_receiver.c  cserver_com_sender.c
music_hub_device/modules/client_serv_com/include/: cserver_com_receiver.h  cserver_com_sender.h
music_hub_device/modules/esp_http_client/: esp_http_client_user.c
music_hub_device/modules/esp_http_client/include/: esp_http_client_user.h
music_hub_device/tasks/: music_dbg.c  task_bt_dev.c  task_http.c  task_sdcard.c  task_test_com.c
music_hub_device/tasks/include/: task_bt_dev.h  task_http.h  task_sdcard.h  task_test_com.h
music_hub_server/server_flask/: main.py  serv_prot.py  test_user_req.py  yandex_api.py
music_hub_server/yandex_api/: alisa_parcer.py  main.py  recursive_search.py
